--- a/resources/sass/blocks/_faq.scss
+++ b/resources/sass/blocks/_faq.scss
@@ -53,7 +53,7 @@ section#FAQ {
             color: #532f1c;
             font-size: 2.2rem;
             font-weight: 700;
-            margin-left: 5.4rem;
+            margin-left: 6rem;
         }
     }
     .form {
@@ -135,8 +135,13 @@ section#FAQ {
             }
         }
     }
+    .answer {
+        p {
+            margin-left: 6.8rem !important;
+        }
+    }
     .question {
-        justify-content: space-between !important;
+        justify-content: flex-start !important;
     }
 }
 @keyframes fade {
