--- a/resources/sass/blocks/_share.scss
+++ b/resources/sass/blocks/_share.scss
@@ -1,7 +1,10 @@
 @media screen and (max-width: 562px) {
   section#share {
     margin-top: 40rem !important;
-
+    overflow: hidden;
+      .sharebg {
+          display: none;
+      }
       .title {
           margin-top: 2rem;
       }
@@ -54,7 +57,7 @@ section#share {
         display: block;
         position: absolute;
         width: 100%;
-        height: 10rem;
+        height: 13rem;
         bottom: -8rem;
         left: 0;
         z-index: 2;
@@ -63,7 +66,7 @@ section#share {
     .sharebg {
         position: absolute;
         width: 100%;
-        top: 15rem;
+        top: 6rem;
     }
   .container {
     .info {
