--- a/resources/sass/blocks/_winners.scss
+++ b/resources/sass/blocks/_winners.scss
@@ -22,14 +22,14 @@ section#winners {
                 align-items: center;
                 position: relative;
                 flex-wrap: nowrap;
-                justify-content: space-between;
+                justify-content: center;
                 z-index: 1;
                 margin-left: 2rem;
                 input {
                     font-size: 3.2rem;
                     margin-bottom: unset;
-                    padding: 1.1rem 6rem;
-                    width: 85%;
+                    padding: 0rem 3rem;
+                    width: 60%;
                     border-radius: 1rem;
                     }
                 div {
@@ -40,19 +40,19 @@ section#winners {
                         border: unset;
                         border-radius: 1rem;
                         cursor: pointer;
-                        height: 7.7rem;
+                        height: 5.5rem;
+                        width: 7rem;
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        width: 9rem;
                         transition: all .4s ease-in-out;
                     }
                 }
                 .btn {
                     .icon.search {
                         background: url("/assets/icons/search_icon.png") 50%/contain no-repeat;
-                        width: 5.6rem;
-                        height: 5.6rem;
+                        width: 3.5rem;
+                        height: 3.5rem;
                     }
                 }
             }
@@ -182,6 +182,12 @@ section#winners {
 @media screen and (max-width: 562px) {
     section#winners {
         font-size: 0.5vmin  !important;
+        .winnersbg {
+            display: none;
+        }
+        .lentils {
+            display: none !important;
+        }
         .container {
             .table {
                 width: 100% !important;
@@ -218,11 +224,11 @@ section#winners {
             .prizes {
                 flex-wrap: wrap;
                 justify-content: center !important;
-                gap: 3rem;
-                &:first-child {
-                    width: 100%;
-                }
-
+                gap: 1rem;
+                column-gap: 5rem;
+            }
+            .prizes_1 {
+                width: 100% !important;
             }
 
         }
