--- a/resources/sass/pages/_registration.scss
+++ b/resources/sass/pages/_registration.scss
@@ -1,21 +1,92 @@
+@media screen and (max-width: 562px) {
+    .frame_register {
+        width: 100%;
+    }
+    .yellow_register {
+        display: none !important;
+    }
+    .register_again {
+        margin-bottom: 3rem;
+    }
+}
+@media screen and (min-width: 1336px) and (max-width: 1440px) {
+    .yellow_register {
+        left: 30rem !important;
+        max-width: 28rem !important;
+        top: 9.1rem !important;
+    }
+}
 section#registration {
+    position: relative;
+    .frame_register {
+        position: absolute;
+        width: 100%;
+        left:0;
+    }
+    .yellow_register {
+        position: absolute;
+        left: 40rem;
+        top: 8.1rem;
+        max-width: 30rem;
+    }
     .wrapper {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-    .description {
-        font-size: 2.5rem;
-        text-align: center;
-        color: #552100;
-        span {
-            font-size: 3.3rem;
-        }
-        .register_form {
-            input {
-                width: 30rem;
+        margin-top: 2rem;
+        .description {
+            font-size: 2.8rem;
+            text-align: center;
+            color: #552100;
+            span {
+                font-size: 3.3rem;
             }
         }
+            .register_form {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                font-size: 2.5rem;
+                input {
+                    width: 25rem;
+                    border-radius: 1rem;
+                    padding:.5rem 0 0.5rem 1rem;
+                    &:focus {
+                        outline: none;
+                    }
+                }
+                .btn-danger {
+                    width: 20rem;
+                    height: 6rem;
+                    font-size: 3.5rem;
+                    text-transform: uppercase;
+                    background-color: #ff000a;
+                    border-radius: 1.8rem;
+                    outline: none;
+                    border: none;
+                    box-shadow: 0px 7px 20px 2px rgba(0, 0, 0, .7);
+                    display: block;
+                    margin: 2rem auto;
+                }
+            }
+            .register_again {
+                margin-top: 12rem;
+                .btn-again {
+                    display: block;
+                    margin: 0 auto;
+                    font-size: 2.8rem;
+                    color: #552100;
+                    text-transform: uppercase;
+                    background-color: transparent;
+                    outline: none;
+                    border: 2px solid #552100;
+                    border-radius: 1rem;
+                    margin-top: 2rem;
+                    padding: 0.5rem 3rem;
+                }
+
+            }
     }
 }
