--- a/resources/sass/pages/_profile.scss
+++ b/resources/sass/pages/_profile.scss
@@ -42,7 +42,7 @@ section#profile {
             background: url('/assets/frame.png') center center/ cover no-repeat;
         }
     }
-    .content {
+    .profile_content {
         display: flex;
         justify-content: center;
         gap: 5rem;
@@ -55,6 +55,19 @@ section#profile {
             gap: 3rem;
             align-items: center;
             position: relative;
+            .swiper-btn-next {
+                position: absolute;
+                right: 1rem;
+                top: 50%;
+            }
+            .swiper-btn-prev {
+                position: absolute;
+                left: -2rem;
+                top: 50%;
+                transform: rotate(180deg);
+            }
+            .prize_1 {
+            }
             &:last-child {
                 gap: 1rem;
             }
@@ -101,7 +114,17 @@ section#profile {
                 color: #552100;
                 text-transform: uppercase;
             }
-            .prize_name_3 {
+            .prize_name_VR {
+                font-size: 3.2rem;
+                font-weight: 700;
+                color: #fff254;
+                background-color: #7f3489;
+                padding: 0 2.5rem;
+                transform: skew(14deg , -10deg);
+                position: absolute;
+                bottom: 2rem;
+            }
+            .prize_name_bober {
                 font-size: 3.2rem;
                 font-weight: 700;
                 color: #fff254;
@@ -200,5 +223,80 @@ section#profile {
         gap: 10rem;
         align-items: center;
         margin-bottom: 4rem;
+    }
+}
+@media screen and (max-width: 562px) {
+    .content-2 {
+        flex-wrap: wrap;
+        row-gap: 1rem !important;
+        column-gap: 4rem !important;
+        .prizes {
+            &:first-child {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+            }
+        }
+    }
+    .rows {
+        //display: flex !important;
+        //justify-content: space-between !important;
+        //text-align: center;
+        //font-size: 1.rem !important;
+        gap: 1.5rem;
+    }
+    .btn-danger {
+    }
+    .profile_content {
+        column-gap: 2rem !important;
+        row-gap: 7rem !important;
+        flex-wrap: wrap;
+        margin-top: 5rem !important;
+        .prize_name {
+            font-size: 2rem !important;
+            order: 3;
+        }
+        .prize_1 {
+            order: 3;
+
+        }
+        .prize_2 {
+            order: 1;
+            height: 15rem !important;
+        }
+        .prize_3 {
+            order: 2;
+            height: 19rem !important;
+            .prize_name_3 {
+                font-size: 2rem !important;
+                padding: 0 0.5rem !important;
+            }
+        }
+        .prize_name_VR {
+            font-size: 2rem !important;
+            padding: 0 1.5rem !important;
+            bottom: -3rem !important;
+            left: 3rem;
+        }
+        .prize_name_bober {
+            font-size: 2.2rem !important;
+            padding: 0 1.5rem !important;
+            bottom: 5rem !important;
+            left: 2.5rem !important;
+        }
+        .change_prize_bober {
+            top: 4rem !important;
+        }
+        .product_VR {
+            bottom: -6rem !important;
+        }
+        .swiper-btn-next {
+            right: -2rem !important;
+
+        }
+        .swiper-btn-prev {
+            left: -4rem !important;
+
+        }
     }
 }
