--- a/resources/sass/pages/_registration.scss
+++ b/resources/sass/pages/_registration.scss
@@ -18,6 +18,7 @@
 }
 section#registration {
     position: relative;
+    margin-bottom: 5.4rem;
     .frame_register {
         position: absolute;
         width: 100%;
