--- a/resources/sass/blocks/_footer.scss
+++ b/resources/sass/blocks/_footer.scss
@@ -4,8 +4,19 @@ footer.footer {
     background-repeat: no-repeat;
     background-position: center;
     padding: 2rem 0 1rem 0;
-
     width: 100%;
+    position: relative;
+    &:before {
+        content: '';
+        background-image: url("/assets/zigzag.png");
+        background-repeat: repeat-x;
+        background-position: center;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        position: absolute;
+    }
     .content {
         display: flex;
         justify-content: space-between;
