--- a/resources/sass/blocks/_winners.scss
+++ b/resources/sass/blocks/_winners.scss
@@ -3,7 +3,13 @@ section#winners {
     width: 100%;
 
 
-    .title {
+    .winners_title {
+        font-size: 5.2rem;
+        color: #552100;
+        text-align: center;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-family: 'EBA-DINPro-CondensedBlack';
         margin-top: 10rem;
     }
     .winnersbg {
@@ -60,10 +66,48 @@ section#winners {
         .table {
             width: 86.5rem;
             margin:0 auto;
+            position: relative;
+            z-index: 3;
+
+            &:after {
+                content: '';
+                background-image: url("/assets/light.png");
+                background-size: cover;
+                background-position: center;
+                position: absolute;
+                top: 0;
+                right: -53rem;
+                z-index: -1;
+                width: 90%;
+                height: 100%;
+            }
+            &:before {
+                content: '';
+                background-image: url("/assets/light.png");
+                background-size: cover;
+                background-position: center;
+                position: absolute;
+                top: 0;
+                left: -53rem;
+                z-index: -1;
+                width: 90%;
+                height: 100%;
+            }
             .table_nav {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                position: relative;
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    width: 2.6rem;
+                    height: 0.1rem;
+                    background-color: white;
+                    bottom: 0;
+                    left: 48.5%;
+                }
                 .winners {
                     text-transform: uppercase;
                     font-weight: 700;
@@ -119,16 +163,22 @@ section#winners {
                 padding-top: 1rem;
                 border-right: 1px solid white;
                 border-left: 1px solid white;
+                border-bottom: 1px solid white;
                 >div {
                     text-transform: uppercase;
                     font-weight: 700;
                 }
             }
+            .table_head.red {
+                background-color: #ff000a;
+            }
+            .table_head.yellow {
+                background-color: inherit;
+            }
             .table_data {
                 border-right: 1px solid white;
                 border-left: 1px solid white;
                 position: relative;
-                margin-bottom: 10rem;
                 .table_body {
                     .rows {
                         display: flex;
@@ -144,15 +194,24 @@ section#winners {
                     top:0;
                     max-width: 28rem;
                     left: -19.2rem;
-
                 }
+            }
+            .pagination {
+                display: flex;
+                gap: 1.5rem;
+                justify-content: center;
+                align-items: center;
+                margin-top: 1rem;
+                font-size: 2rem;
+                color: #552100;
             }
         }
         .lentils {
             position: absolute;
             max-width: 10rem;
             right: 4rem;
-            bottom: 30rem;
+            bottom: 25%;
+            z-index: 1;
         }
         .title {
             font-size: 4.3rem;
@@ -163,7 +222,17 @@ section#winners {
             display: flex;
             align-items: center;
             justify-content: space-between;
-
+            &:before {
+                content: '';
+                background-image: url("/assets/light.png");
+                background-size: cover;
+                background-position: center;
+                position: absolute;
+                left: 5rem;
+                z-index: -1;
+                width: 90%;
+                height: 100%;
+            }
         }
         .btn-danger {
             width: 32rem;
